# oxideav-mpeg4video

./: CHANGELOG.md  Cargo.toml  README.md
benches/: dequant_bench.rs  frame_bench.rs  idct_bench.rs  mc_bench.rs
src/: bitreader.rs  bits_ext.rs  bitwriter.rs  block.rs  decoder.rs  encoder.rs  inter.rs  iq.rs  lib.rs  mb.rs  mc.rs  pvop.rs  resync.rs  start_codes.rs
src/headers/: mod.rs  vol.rs  vop.rs  vos.rs
src/simd/: chunked.rs  mod.rs  portable.rs  scalar.rs
src/tables/: cbpy.rs  dc_size.rs  mcbpc.rs  mod.rs  mv.rs  tcoef.rs  vlc.rs
tests/: encoder_roundtrip.rs  p_vop.rs  reference_clips.rs
