[package]
name = "oxideav-mpeg4video"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-mpeg4video"
authors = ["Mark Karpeles"]
description = "Pure-Rust MPEG-4 Part 2 Video (ISO/IEC 14496-2) decoder for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-mpeg4video"
keywords = ["multimedia", "video", "mpeg4", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.0"
oxideav-codec = "0.0"
